# cpp_exercise

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_test.sh
.devcontainer/: devcontainer.json
.github/workflows/: cmake.yaml  cmake_build.yaml
.scripts/: create_tests.bash
exercise/01_begin_cpp/: 01-02_hello-world.hpp
exercise/02_basic_syntax/: 02-01_variables.hpp  02-02_primitive-types.hpp
test/01/: 0102_test.cpp  CMakeLists.txt
test/02/: 0201_test.cpp  0202_test.cpp  0203_test.cpp  0204_test.cpp  0205_test.cpp  0206_test.cpp  0207_test.cpp  0208_test.cpp  0209_test.cpp  CMakeLists.txt
test/03/: 0301_test.cpp  0302_test.cpp  0303_test.cpp  0304_test.cpp  0305_test.cpp  0306_test.cpp  0307_test.cpp  0308_test.cpp  0309_test.cpp  CMakeLists.txt
test/04/: 0401_test.cpp  0402_test.cpp  0403_test.cpp  0404_test.cpp  0405_test.cpp  CMakeLists.txt
test/05/: 0501_test.cpp  0502_test.cpp  CMakeLists.txt
test/06/: 0601_test.cpp  0602_test.cpp  0603_test.cpp  0604_test.cpp  0605_test.cpp  CMakeLists.txt
test/07/: 0701_test.cpp  0702_test.cpp  0703_test.cpp  0704_test.cpp  0705_test.cpp  0706_test.cpp  0707_test.cpp  0708_test.cpp  0709_test.cpp  0710_test.cpp  0711_test.cpp  0712_test.cpp  CMakeLists.txt
test/08/: 0801_test.cpp  0802_test.cpp  CMakeLists.txt
test/09/: 0901_test.cpp  0902_test.cpp  0903_test.cpp  CMakeLists.txt
test/10/: 1001_test.cpp  1002_test.cpp  1003_test.cpp  CMakeLists.txt
